[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-unirate"
version = "0.1.0"
description = "LangChain integration for the UniRate currency-exchange API — wrapper utility plus an agent tool for FX rate lookups and conversion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Unirate Team" }]
keywords = [
    "langchain",
    "langchain-tools",
    "unirate",
    "currency",
    "exchange-rates",
    "forex",
    "fintech",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3,<2.0",
    "pydantic>=2.7,<3.0",
    "requests>=2.31,<3.0",
]

[project.urls]
Homepage = "https://github.com/UniRate-API/langchain-unirate"
Repository = "https://github.com/UniRate-API/langchain-unirate"
Issues = "https://github.com/UniRate-API/langchain-unirate/issues"
Provider = "https://unirateapi.com"

[dependency-groups]
test = [
    "pytest>=8.0,<9.0",
    "requests-mock>=1.11,<2.0",
]
lint = [
    "ruff>=0.6,<1.0",
]
typing = [
    "mypy>=1.10,<2.0",
    "types-requests>=2.31,<3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_unirate"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
